--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,9 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm install
+RUN npm install --only=prod
 COPY . .
 
+RUN npm install babel
 RUN npm run build
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
