--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,42 @@
 {
-  "name": "mcw-server",
+  "name": "tx-challenge-backend",
   "version": "0.0.1",
   "main": "src/server.ts",
   "description": "Tx Group Challenge - Backend service",
-  "author": "Tiago Almeida<info@cyberteck.ch>",
+  "author": "Tiago Almeida<rexy.tiago@gmail.com>",
   "browserslist": [
     "last 1 versions",
     "not ie <= 11"
   ],
   "license": "CC BY-NC-ND 4.0",
   "scripts": {
+    "test": "jest --watchAll --no-cache",
     "dev": "ts-node-dev --poll src/server.ts",
-    "build": "babel src --out-dir dist --extensions \".ts, .tsx\" --source-maps inline",
+    "build": "babel src --out-dir dist --extensions \".ts, .json, .tsx\" --source-maps inline --copy-files",
     "start": "node dist/server.js"
   },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "spec",
+      "dist"
+    ],
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
+  },
   "dependencies": {
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.12.1",
     "helmet": "^4.6.0",
+    "luxon": "^2.0.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
@@ -32,33 +46,20 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/jest-dom": "^5.14.1",
     "@types/compression": "^1.7.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/luxon": "^1.27.1",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.5",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-compat": "^3.9.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "husky": "^6.0.0",
-    "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1",
+    "jest": "^27.0.6",
+    "supertest": "^6.1.4",
+    "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
   }
 }
