--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "web-challenge-solution",
+  "name": "challenge-solution",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +15,7 @@
     "luxon": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -26,12 +28,6 @@
     "test": "react-scripts test",
     "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -48,8 +44,29 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
     "@types/luxon": "^1.27.0",
+    "@types/react-notifications-component": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-compat": "^3.9.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsdoc": "^36.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
