--- a/backend/package.json
+++ b/backend/package.json
@@ -61,5 +61,8 @@
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
+  },
+  "prettier": {
+    "endOfLine": "auto"
   }
 }
